<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".RepairerSeparateProblem">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title"
                android:background="@drawable/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/separate_problem_title"
                android:textSize="30sp"
                android:textColor="@color/text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/problemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edit"
                android:gravity="center"
                android:text="@string/problem_description_text_filler"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/problemPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/aps_icon"
                tools:ignore="UnknownId"
                android:contentDescription="@string/cameraViewDescription" />

            <Button
                android:id="@+id/takePic"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit"
                android:drawableRight="@drawable/camera_icon"
                android:textColor="@color/text"
                android:text="@string/take_pic"
                android:drawableEnd="@drawable/camera_icon"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:layout_marginTop="10dp"
                android:background="@drawable/edit"
                android:drawableRight="@drawable/ic_check_box_black_24dp"
                android:id="@+id/problemSolved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/text"
                android:text="@string/problem_solved"
                android:drawableEnd="@drawable/ic_check_box_black_24dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

</ScrollView>