<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RepairerTakePhoto"
    android:gravity="center"
    android:background="@drawable/login_background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/attach_solved_prob_pic"
        android:layout_marginVertical="20dp"
        android:textColor="@color/text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <Button
            android:id="@+id/dont_take_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textColor="@color/text"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/edit_red_accent"
            android:text="@string/no"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/take_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/edit_red_accent"
            android:padding="3dp"
            android:textColor="@color/text"
            android:text="@string/yes"
            tools:ignore="ButtonStyle" />


    </LinearLayout>
</LinearLayout>