<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/grey_background"
android:gravity="center"
tools:context=".Login">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#28E4FF"
        android:text="@string/loading"
        android:gravity="center_horizontal"
        />
    <ImageView
        android:id="@+id/title_pic"
        android:layout_marginTop="75dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/aps_icon" />

    <TextView
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/tip"
        android:textColor="#28E4FF"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <Spinner
        android:id="@+id/spinner_pults"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_pults_prompt"
        android:drawablePadding="10dp"
        android:layout_gravity="center"
        android:background="@drawable/edit"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/access_code"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/access_code"
        android:textColorHint="#54c1d1"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:textColor="#28E46F"
        android:layout_gravity="center"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_lock"
         />

    <Button
        android:id="@+id/check_this_point"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/login_button"
        android:layout_marginTop="15dp"
        android:background="@drawable/button" />
    <!--        -->

</LinearLayout>

</RelativeLayout>